--- a/static/css/styles_tests.css
+++ b/static/css/styles_tests.css
@@ -9,7 +9,7 @@ body{
     font-size:2rem;
 }
 .container{
-    width:700px
+    width:800px
 }
 
 .bg-dark{
@@ -34,7 +34,7 @@ h1{
     margin-top:30px;
     padding:20px;
     border-style:solid;
-    background-color: /*#dcedc8*/ #e99f4b;    
+    background-color: /*#dcedc8*/ #77a6db;    
 }
 .btn-primary{
     background-color: #cddc39;
