--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -1,12 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-
+/*@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+*/
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&display=swap');
 body{
-    font-family: 'Montserrat', sans-serif;
-    background-color: #6abf69;
+    font-family: 'Open Sans Condensed', sans-serif;
+
+    background-color:/* #6abf69*/;
 }
 .navbar-brand{
     font-family:'Dancing Script', cursive;
     font-size:2rem;
+}
+
+.nav-link {
+    font-weight: 700;
+    font-size:18px;
 }
 .bg-dark{
     background-color: #388e3c !important;
@@ -18,19 +25,33 @@ body{
 }
 h1{
     margin-top:20px;
+    padding-bottom:10px;
+    color:#388e3c;
+}
+h4{
+    font-weight: 700;
+    color:white;
+    font-size:2rem
+}
+h6{
+font-size:18px;
 }
 .box{
     margin-top:30px;
     padding:20px;
     border-style:solid;
-    background-color: /*#dcedc8*/ #c5e1a5;
+    border-width: 1px;
+    border-radius:5px;
 }
-.btn-primary{
+.text-muted{
+    color:#000!important;
+}
+.btn-primary ,.btn-success{
     background-color: #cddc39;
     border-color:#99aa00;
     color:#000;
 }
-.btn-primary a{
+.btn-primary a, .btn-success a{
     color:#000!important;
 }
 .btn-primary:hover{
@@ -49,5 +70,20 @@ ul{
     padding:20px;
 }
 ol{
-    padding:10px;
+    padding:15px;
+}
+li,p{
+    font-size:24px;  
+}
+
+.search{
+margin-left:27%;
+margin-right:27%;
+}
+.search form{
+    padding-left:21%;
+    padding-right:20%;
+}
+.shop{
+    margin-top:20px;
 }
