--- a/templates/doctor_info.html
+++ b/templates/doctor_info.html
@@ -3,11 +3,12 @@
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="css\styles.css " type="text/css">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Le Médecine</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      </head>
+      <body>
+          <!--navbar-->
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <a class="navbar-brand" href="#">Le Médecine</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -15,8 +16,8 @@
                 <li class="nav-item">
                   <a class="nav-link" href="patient_home.html">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor</a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="shop.html">Pharmacy</a>
@@ -30,23 +31,22 @@
               </ul>
             </div>
           </nav>
-
-          <h1 class="text-center"> Self-Assesment Test</h1>
+          <h1 class="text-center">Available Doctors</h1>
           <div class="container box">
               <div class="row">
-                  <div class="col">
-                      <ol>
-                          <li>Do you feel like listening to some music?
-                              <ul>
-                                  <li><input type="radio" value="Yes" id="yes" name="choice">
-                                    <label for="yes">Yes</label>
-                                </li>
-                                  <li><input type="radio" value="No" id="no"name="choice">
-                                    <label for="no">No</label>
-                                </li>
-                              </ul>
-                          </li>
-                      </ol>
+                  <div class="col-8">
+                      <p>
+                          <strong>Name:</strong> Dr P. Gandhi
+                      </p>
+                      <p>
+                          <strong>Area of Speciality:</strong> Family Medicine
+                      </p>
+                      <p>
+                          <strong>Contact:</strong> +91-9999999999
+                      </p>
+                  </div>
+                  <div class="col-4">
+                    <button type="button" class="btn btn-success"><a href="video_chat.html">Video chat</a></button>
                   </div>
               </div>
           </div>
