--- a/templates/video_chat.html
+++ b/templates/video_chat.html
@@ -2,7 +2,7 @@
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="css\styles.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
       <body>
           <!--navbar-->
@@ -28,7 +28,7 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe src="https://zipcall.io/join/" title="call" height="500" width="100%">
+                      <iframe src="https://zipcall.io/join/sdsd2001" title="call" height="700" width="100%">
 
                       </iframe>
                   </div>
