--- a/templates/payment_ack.html
+++ b/templates/payment_ack.html
@@ -2,7 +2,7 @@
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="css\styles.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
       <body>
           <!--navbar-->
@@ -28,7 +28,7 @@
 
           <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Payment Successful of Rs 200</h1>
+              <h1 class="display-4">Payment Successful. Total Transaction of Rs 200</h1>
               <p class="lead">Your order is confirmed.</p>
             </div>
           </div>
