--- a/templates/self-assessment.html
+++ b/templates/self-assessment.html
@@ -2,7 +2,7 @@
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="css\styles.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
