--- a/templates/self-assessment2.html
+++ b/templates/self-assessment2.html
@@ -2,7 +2,7 @@
     <head>
         <title>Self Assessment!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/css/styles_tests.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -12,6 +12,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" href="/tests">Tests <span class="sr-only">(current)</span></a>
+                </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
@@ -29,7 +32,7 @@
           <form action='/tests/self_assess' method='POST'>
           {% with messages = get_flashed_messages() %}
 						{% if messages %}
-						<div align ='center' class="container box2">
+						<div align ='center' class="container box">
 								{{messages[0]}}
 							</div>
 						{% endif %}
