--- a/templates/video_chat.html
+++ b/templates/video_chat.html
@@ -1,4 +1,5 @@
 <html>
+
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -13,27 +14,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                    <a class="nav-link" href="/tests">Tests</a>
+                  </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/doctor_list">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Shop</a>
+                  <a class="nav-link" href="/shop">Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                   </li>
               </ul>
             </div>
           </nav>
+          <h1 class="text-center">Video Calling Dr {{name}}</h1>
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe src="https://zipcall.io/join/sdsd2001" title="call" height="700" width="100%">
-
+                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/sdsd2001" title="call" height="700" width="100%">
                       </iframe>
                   </div>
               </div>
           </div>
+
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
