--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -77,14 +77,13 @@ li,p{
 }
 
 .search{
-margin-left:27%;
-margin-right:27%;
+margin-left:6%;
+margin-right:6%;
 }
-.search form{
+/*.search form{
     padding-left:21%;
     padding-right:20%;
-}
-
+}*/
 .shop{
     margin-top:20px;
 }
@@ -100,4 +99,16 @@ select{
 }
 .margin{
     margin:20px !important;
+}
+.float{
+    float:left;
+    width:20%;
+    height:100%;
+    border-radius: 2px;
+    margin-bottom:10px;
+    margin-right:20px;
+}
+.float-right{
+    float:right;
+    margin:20px;
 }
