--- a/templates/doctor_info.html
+++ b/templates/doctor_info.html
@@ -2,7 +2,7 @@
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="css\styles.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
       <body>
           <!--navbar-->
@@ -14,19 +14,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="patient_home.html">Home</a>
+                  <a class="nav-link" href="/tests">Home</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/doctor_info">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Pharmacy</a>
+                  <a class="nav-link" href="/shop">Pharmacy</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="hospital.html">Near Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                   </li>
               </ul>
             </div>
@@ -45,8 +45,44 @@
                           <strong>Contact:</strong> +91-9999999999
                       </p>
                   </div>
-                  <div class="col-4">
-                    <button type="button" class="btn btn-success"><a href="video_chat.html">Video chat</a></button>
+                  <div class="col-4" align="right">
+                    <button type="button" class="btn btn-success"><a href="/video_patient/P.Gandhi">Video chat</a></button>
+                  </div>
+              </div>
+          </div>
+          <div class="container box">
+              <div class="row">
+                  <div class="col-8">
+                      <p>
+                          <strong>Name:</strong> Dr J.Krishnan
+                      </p>
+                      <p>
+                          <strong>Area of Speciality:</strong> General Physician
+                      </p>
+                      <p>
+                          <strong>Contact:</strong> +91-8888888888
+                      </p>
+                  </div>
+                  <div class="col-4" align="right">
+                    <button type="button" class="btn btn-success"><a href="/video_patient/J.Krishnan">Video chat</a></button>
+                  </div>
+              </div>
+          </div>
+          <div class="container box">
+              <div class="row">
+                  <div class="col-8">
+                      <p>
+                          <strong>Name:</strong> Dr N.Goyal
+                      </p>
+                      <p>
+                          <strong>Area of Speciality:</strong> Child Specialist
+                      </p>
+                      <p>
+                          <strong>Contact:</strong> +91-8888877777
+                      </p>
+                  </div>
+                  <div class="col-4" align="right">
+                    <button type="button" class="btn btn-success"><a href="/video_patient/N.Goyal">Video chat</a></button>
                   </div>
               </div>
           </div>
