--- a/templates/doctor_vc.html
+++ b/templates/doctor_vc.html
@@ -14,13 +14,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="doctor_HOME.html">Patient's Detail<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/doctor_home">Patient's Detail<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link" href="doctor_vc.html">Appointment</a>
+                    <a class="nav-link" href="/doctor_vc">Appointment</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="index.html">Logout</a>
+                      <a class="nav-link" href="/logout">Logout</a>
                     </li>
               </ul>
             </div>
@@ -28,7 +28,7 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe src="https://zipcall.io/join/" title="call" height="500" width="100%">
+                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/" title="call" height="500" width="100%">
                       </iframe>
                   </div>
               </div>
