--- a/templates/patient_home.html
+++ b/templates/patient_home.html
@@ -13,19 +13,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="patient_home.html">Home  <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/tests">Home  <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor</a>
+                  <a class="nav-link" href="/doctor_list">Consult a Doctor</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Pharmacy</a>
+                  <a class="nav-link" href="/shop">Pharmacy</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="hospital.html">Near Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Logout</a>
+                    <a class="nav-link" href="/logout">Logout</a>
                   </li>
               </ul>
             </div>
