--- a/templates/shop2.html
+++ b/templates/shop2.html
@@ -15,18 +15,18 @@
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                   <li class="nav-item">
-                    <a class="nav-link" href="/tests">Home</a>
+                    <a class="nav-link" href="patient_home.html">Home</a>
                   </li>
-                  <a class="nav-link" href="/doctor_info">Consult a Doctor <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="/shop">Pharmacy</a>
+                  <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="hospital.html">Near Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="index.html">Logout</a>
                   </li>
               </ul>
             </div>
@@ -38,8 +38,8 @@
                 <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
               </form>
           </div>
-          <hr>
-          <h1 class="text-center">Available Pharmacies :</h1>
+          <h1 class="text-center">Search Results :</h1>
+          {% if res==True%}
           <div class="container box">
               <div class="row">
                   <div class="col-9">
@@ -53,12 +53,17 @@
                         </div>
                       </div>-->
                       <img src="../static/images/medicine.jpg" class="float"alt="medicine" height="50" width="50">
-                      <h5>XYZ SHOP</h5>
-                      <p>Get your medicines here!</p>
+                      <h5>XYZ SHOP : Get Your Medicines here</h5>                      
+                      <p class="card-text">{{item}} is available | Quantity available : {{q}} @ Rs{{p}}/tab</p>
+                      <p class="card-text"></p>
                     </div>
-                      
+                      <div class="col-3">
+                      <a href="/shop/confirmation" class="btn btn-primary float-right">Pick up</a>
+                          <a href="/shop/confirmation" class="btn btn-primary float-right">Home Delivery</a>
+                  </div>
               </div>
           </div>
+          {%endif%}
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
