Adding updated templates

--- a/templates/doctor_home.html
+++ b/templates/doctor_home.html
@@ -40,8 +40,8 @@
                           Contact: +91-9999999999
                       </p>
                   </div>
-                  <div class="col-4">
-                    <button type="button" class="btn btn-success"><a href="doctor_vc.html">Video chat</a></button>
+                  <div class="col-4" align="right">
+                    <button type="button" class="btn btn-success"><a href="/doctor_vc">Video chat</a></button>
                   </div>
               </div>
           </div>
