--- a/templates/doctor_vc.html
+++ b/templates/doctor_vc.html
@@ -28,7 +28,7 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/" title="call" height="500" width="100%">
+                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/sdsd2001" title="call" height="500" width="100%">
                       </iframe>
                   </div>
               </div>
