--- a/templates/hospital.html
+++ b/templates/hospital.html
@@ -2,7 +2,7 @@
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="css\styles.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
       <body>
           <!--navbar-->
@@ -14,27 +14,30 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="patient_home.html">Home</a>
+                  <a class="nav-link" href="/tests">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/doctor_info">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Pharmacy</a>
+                  <a class="nav-link" href="/shop">Pharmacy</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="hospital.html">Near Me</a>
+                    <a class="nav-link" href="/nearby">Near Me</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="index.html">Logout</a>
+                      <a class="nav-link" href="/logout">Logout</a>
                     </li>
               </ul>
             </div>
           </nav>
+      <form action="/nearby" method='POST'> 
           <div class="container">
               <div class="row">
                   <div class="col-6">
+              
           <ul class="hosp">
+      
             <li><input type="radio" value="Hospital" id="Hospital" name="choice">
               <label for="Hospital">Hospital</label>
           </li>
@@ -44,23 +47,40 @@
         </ul>
                 </div>
                 <div class="col-6">
+                
+                
         <form class="form-inline my-2 my-lg-0 margin">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <br><input class="form-control mr-sm-2" name="locality" type="search" placeholder="Locality Name" aria-label="Search">
+            <div align="center">
             <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+            </div>
+        </form>
+      </form>
         </div>
         </div>
         </div>
+        {%if res==True%}
+        {%for name in names:%}
+        
         <div class="container box">
             <div class="row">
                 <div class="col">
-                    <p>Name: </p>
-                    <p>Address: </p>
-                    <p>Timing Details: </p>
-                    <p>Website: </p>
+                
+                    <p>Name: {{name.title}}</p>
+                    <p>Address:{{name.address}} </p>
+                    {%if name.extensions is not None%}
+                    <p>Timing Details:{{name.extensions[0]}},{{name.extensions[1]}} </p>
+                    {%endif%}
+                    {%if name.link is not None%}
+                    <p>Website:{{name.link}} </p>
+                    {%endif%}
+                    {%if name.type is not None%}
+                    <p>Type: {{name.type}}</p>
+                    {%endif%}
                 </div>
             </div>
         </div>
+        {%endfor%}
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
