--- a/templates/hospital.html
+++ b/templates/hospital.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <title>Near Me</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
@@ -13,21 +13,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/tests">Home</a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/tests">Home </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/doctor_info">Consult a Doctor <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/doctor_list">Consult a Doctor</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/shop">Pharmacy</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/nearby">Near Me</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="/nearby">Near Me <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/prescription">Prescriptions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
                   </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="/logout">Logout</a>
-                    </li>
               </ul>
             </div>
           </nav>
