--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
     <head>
         <title>Welcome!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="css\styles.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css" type="text/css">
       </head>
       <body>
           <!--navbar-->
@@ -14,7 +14,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                      <a class="nav-link" href="index.html">Login</a>
+                      <a class="nav-link" href="/login">Login</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="register.html">Register <span class="sr-only">(current)</span></a>
