--- a/templates/doctor_home.html
+++ b/templates/doctor_home.html
@@ -15,10 +15,10 @@
               <ul class="navbar-nav ml-auto">
                 
                 <li class="nav-item active">
-                  <a class="nav-link" href="doctor_HOME.html">Patient's Detail<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/doctor">Patient's Detail<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="doctor_vc.html">Appointment</a>
+                  <a class="nav-link" href="/doctor_vc">Appointment</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/">Logout</a>
