--- a/templates/doctor_vc.html
+++ b/templates/doctor_vc.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <title>Video Chat</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="css\styles.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
       <body>
           <!--navbar-->
@@ -28,7 +28,7 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/sdsd2001" title="call" height="500" width="100%">
+                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/sdsd2001" title="call" height="700" width="100%">
                       </iframe>
                   </div>
               </div>
@@ -39,7 +39,8 @@
               <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
               <div class="search">
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Medicine" aria-label="Medicine">
+                    <input class="form-control mr-sm-2" name="illness" type="text" placeholder="Illness in brief" aria-label="Medicine">
+                    <input class="form-control mr-sm-2" name="medicine" type="text" placeholder="Medicine" aria-label="Medicine">
                     <label for="medicine"></label>
 
                     <select name="meds" id="meds">
