--- a/templates/inkblot.html
+++ b/templates/inkblot.html
@@ -2,7 +2,7 @@
     <head>
         <title>Inkblot Test</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/css/styles_tests.css " type="text/css">
+        <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -12,14 +12,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="/tests">Home</a>
-                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="/doctor_list">Consult a Doctor <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/tests">Home  <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/shop">Shop</a>
+                  <a class="nav-link" href="/doctor_list">Consult a Doctor</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/shop">Pharmacy</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/nearby">Near Me</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/prescription">Prescriptions</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
@@ -32,8 +38,8 @@
           <form action='/tests/inkblot' method='POST'>
           {% with messages = get_flashed_messages() %}
 						{% if messages %}
-						<div align ='center' class="container box2">
-								{{messages[0]}}
+						<div align ='center' class="container box">
+								<h3>{{messages[0]}}</h3>
 							</div>
 						{% endif %}
 					{% endwith %} 
