--- a/templates/login.html
+++ b/templates/login.html
@@ -16,10 +16,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Login <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/login">Login <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="register.html">Register</a>
+                  <a class="nav-link" href="/register">Register</a>
                 </li>
               </ul>
             </div>
@@ -32,6 +32,7 @@
     <div class="col-5">
       <h1> Login as a Patient</h1>
       <form action="/p" method='POST'>
+      
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" name="patient_email" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -45,6 +46,14 @@
           <input type="checkbox" name="patien" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Remember me</label>
         </div>
+        {% with messages = get_flashed_messages() %}
+						{% if messages and user=='p': %}
+              <div align='center'>
+              <h5>{{messages[0]}}</h5>
+              </div>
+            {% endif %}
+				{% endwith %}
+        
         <button type="submit" class="btn btn-primary">Submit</button>
      </form>
     </div>
@@ -67,6 +76,13 @@
           <input type="checkbox" class="form-check-input" name="doctor" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Remember me</label>
         </div >
+        {% with messages = get_flashed_messages() %}
+						{% if messages and user=="d":%}
+              <div align='center'>
+              <h5>{{messages[0]}}</h5>
+              </div>
+            {% endif %}
+				{% endwith %}
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
