--- a/templates/patient_home.html
+++ b/templates/patient_home.html
@@ -22,7 +22,10 @@
                   <a class="nav-link" href="/shop">Pharmacy</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="hospital.html">Near Me</a>
+                  <a class="nav-link" href="/nearby">Near Me</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/prescription">Prescriptions</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
