--- a/templates/shop2.html
+++ b/templates/shop2.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <title>Shop</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
@@ -13,20 +13,23 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                  <li class="nav-item">
-                    <a class="nav-link" href="patient_home.html">Home</a>
-                  </li>
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="shop.html">Pharmacy</a>
+                  <a class="nav-link" href="/tests">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="hospital.html">Near Me</a>
+                  <a class="nav-link" href="/doctor_list">Consult a Doctor</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Logout</a>
+                  <a class="nav-link" href="/shop">Pharmacy  <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/nearby">Near Me</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/prescription">Prescriptions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
                   </li>
               </ul>
             </div>
